--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <img src="images/logo.jpg" class="logo" />
       <div class="content">
-        <p>En mantenimiento</p>
+        <!-- <p>En mantenimiento</p> -->
         <h1>¡Abrimos <span>pronto</span>!</h1>
         <div class="launch-time">
           <div>
